@@ -1,3 +1,12 @@
+2008-02-27  Bastien Nocera  <hadess@hadess.net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c
+	(bacon_video_widget_set_scale_ratio): When a visualisation is
+	playing, and we're being asked to resize the window to a scale,
+	use the viz size to resize the window (Closes: #341355)
+
+	* src/totem.c (window_state_event_cb): Remove debug
+
 2008-02-27  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* data/properties.ui:
